syntax = "proto3";

import "../common/common.proto";

package identity;

service IdentityService {
  rpc register (RegisterRequest) returns (RegisterResponse) {}
  rpc authenticate (AuthenticateRequest) returns (AuthenticateResponse) {}
  rpc verifyEmail (VerifyEmailRequest) returns (VerifyEmailResponse) {}
  rpc resetPassword (ResetPasswordRequest) returns (ResetPasswordResponse) {}
  rpc changePassword (ChangePasswordRequest) returns (ChangePasswordResponse) {}
  rpc createProfile (CreateProfileRequest) returns (CreateProfileResponse) {}
  rpc getUsers (GetUsersRequest) returns (GetUsersResponse) {}
  rpc updateProfile (UpdateProfileRequest) returns (UpdateProfileResponse) {}
}

message Email {
  string address = 1;
  bool verified = 2;
}

message Phone {
  string number = 1;
}

message ContactInformation {
  Phone phone = 1;
}

message Profile {
  string type = 1;
  ContactInformation contactInformation = 2;
}

message User {
  string id = 1;
  Phone phone = 2;
  Profile profile = 3;
}

message VerifyEmailRequest {
  string token = 1;
}

message VerifyEmailErrors {
  string token = 1;
}

message VerifyEmailResponse {
  VerifyEmailErrors errors = 1;
  User result = 2;
}

message RegisterRequest {
  string phone = 1;
  string password = 2;
  string confirmPassword = 3;
  string email = 4;
}

message RegisterErrors {
  string phone = 1;
  string password = 2;
  string confirmPassword = 3;
  string email = 4;
}

message RegisterResponse {
  RegisterErrors errors = 1;
  User result = 2;
}

message AuthenticateRequest {
  string phone = 1;
  string password = 2;
}

message AuthenticateErrors {
  string phone = 1;
  string password = 2;
}

message AuthenticateResponse {
  AuthenticateErrors errors = 1;
  User result = 2;
}

message ResetPasswordRequest {
  string phone = 1;
}

message ResetPasswordErrors {
  string phone = 1;
}

message ResetPasswordResponse {
  ResetPasswordErrors errors = 1;
}

message ChangePasswordRequest {
  string token = 1;
  string password = 2;
  string confirmPassword = 3;
}

message ChangePasswordErrors {
  string token = 1;
  string password = 2;
  string confirmPassword = 3;
}

message ChangePasswordResponse {
  ChangePasswordErrors errors = 1;
  User result = 2;
}

message CreateProfileRequest {
  string id = 1;
  string type = 2;
}

message CreateProfileErrors {
  string id = 1;
  string type = 2;
}

message CreateProfileResponse {
  CreateProfileErrors errors = 1;
  User result = 2;
}

message UsersFilter {
  repeated string id = 1;
}

message GetUsersRequest {
  common.Pager pager = 1;
  common.Order order = 2;
  UsersFilter filters = 3;
}

message GetUsersResponse {
  repeated User rows = 1;
  common.PageInfo pageInfo = 2;
}

message UpdateProfileRequest {
  string id = 1;
  string phone = 2;
}

message UpdateProfileErrors {
  string id = 1;
  string phone = 2;
}

message UpdateProfileResponse {
  UpdateProfileErrors errors = 1;
  Profile result = 2;
}
